# Intelligent-Nutritional-Calculation-System

./: fruit_classifier-2.params  fruits.csv  tructure
project-root/: CMakeLists.txt  LICENSE  README.md
project-root/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
project-root/data/: fruits.csv
project-root/include/: fruit_classifier.cc
project-root/src/: fruit_classifier  fruit_classifier.runfiles_manifest  weight_sensor  weight_sensor-2.params  weight_sensor.cc  weight_sensor.runfiles_manifest
